tdf#153136: fix IgnoreTabsAndBlanksForLineCalculation compat flag

It should handle SPACE, EN SPACE, EM SPACE, FOUR-PER-EM SPACE ,and
IDEOGRAPHIC SPACE, but not SIX-PER-EM SPACE. The latter was mistakenly
added in commit 9ee96273a2090b63e0f579a1e9c9cef780756e6d "tdf#123703
strip six-em-space (U+2006) at line break" (2019-08-24).

Change-Id: I857f303eb19e19f067ad47933fa4b7eb96ce5ca0
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/145995
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit 23555ec4058521262860d48d976eba8563d9ba98)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146029
Tested-by: Mike Kaganski <mike.kaganski@collabora.com>